{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 305,
  "lineage": "4e99a5b2-806a-c168-88be-a0e3c2c20e17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-525044065",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f651011cf7a1271",
            "security_group_rule_id": "sgr-0a99906309e06dd82",
            "self": false,
            "source_security_group_id": "sg-02fcd362ba224d5df",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg",
            "module.sg_rds.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-apptier-alb/d1c7a385d14ae1a2",
            "arn_suffix": "app/tf-apptier-alb/d1c7a385d14ae1a2",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-apptier-alb-1830427910.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-apptier-alb/d1c7a385d14ae1a2",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-apptier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-040893827d60c5c91"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-099454e11f5f79522"
              },
              {
                "subnet_id": "subnet-0ae028af8ddeced95"
              }
            ],
            "subnets": [
              "subnet-099454e11f5f79522",
              "subnet-0ae028af8ddeced95"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.appTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:targetgroup/tf-appTier-tg/fedbf66940b459dc",
            "arn_suffix": "targetgroup/tf-appTier-tg/fedbf66940b459dc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:targetgroup/tf-appTier-tg/fedbf66940b459dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-apptier-alb/d1c7a385d14ae1a2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-appTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09df10cef6b340b8f",
            "association_id": "eipassoc-0734d568ef085ac39",
            "domain": "vpc",
            "id": "eipalloc-09df10cef6b340b8f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-091da49c49c193d86",
            "private_dns": "ip-172-16-1-181.ap-south-1.compute.internal",
            "private_ip": "172.16.1.181",
            "public_dns": "ec2-3-6-34-154.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.34.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:listener/app/tf-apptier-alb/d1c7a385d14ae1a2/7286dc58615a8691",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:targetgroup/tf-appTier-tg/fedbf66940b459dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:listener/app/tf-apptier-alb/d1c7a385d14ae1a2/7286dc58615a8691",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-apptier-alb/d1c7a385d14ae1a2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-alb.aws_lb.my_alb",
            "module.appTier-tg.aws_lb_target_group.tg",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_web",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:listener/app/tf-webtier-alb/3a97613cdccac12b/a837f83c8d1d2e93",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:targetgroup/tf-webTier-tg/8ef8c2895a81828f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:listener/app/tf-webtier-alb/3a97613cdccac12b/a837f83c8d1d2e93",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-webtier-alb/3a97613cdccac12b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet",
            "module.web-alb.aws_lb.my_alb",
            "module.webTier-tg.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:internet-gateway/igw-0dacad5f1a721995c",
            "id": "igw-0dacad5f1a721995c",
            "owner_id": "324354002889",
            "tags": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:vpc/vpc-0ecdc30d2e5c3d11a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-032fe1394ecb981d6",
            "default_route_table_id": "rtb-0a4594a4face0a85f",
            "default_security_group_id": "sg-07cd2be477b37feaf",
            "dhcp_options_id": "dopt-0433b7e17e9339ea1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ecdc30d2e5c3d11a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4594a4face0a85f",
            "owner_id": "324354002889",
            "tags": {
              "Kind": "practice",
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09df10cef6b340b8f",
            "association_id": "eipassoc-0734d568ef085ac39",
            "connectivity_type": "public",
            "id": "nat-093b2e86abe36f81b",
            "network_interface_id": "eni-091da49c49c193d86",
            "private_ip": "172.16.1.181",
            "public_ip": "3.6.34.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b27ca2105b78bdf0",
            "tags": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:route-table/rtb-0c7cc4735820feb23",
            "id": "rtb-0c7cc4735820feb23",
            "owner_id": "324354002889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-093b2e86abe36f81b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:route-table/rtb-086f12620ae167b3a",
            "id": "rtb-086f12620ae167b3a",
            "owner_id": "324354002889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dacad5f1a721995c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fc0e6db86ef490f",
            "route_table_id": "rtb-0c7cc4735820feb23",
            "subnet_id": "subnet-0ae028af8ddeced95"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079aeae88195df6c6",
            "route_table_id": "rtb-0c7cc4735820feb23",
            "subnet_id": "subnet-099454e11f5f79522"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1b.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0995941dd6fb3be94",
            "route_table_id": "rtb-086f12620ae167b3a",
            "subnet_id": "subnet-0b27ca2105b78bdf0"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a91f1b8191450aa1",
            "route_table_id": "rtb-086f12620ae167b3a",
            "subnet_id": "subnet-010a00fe72d3a62d8"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065ae17f04e9d70b4",
            "route_table_id": "rtb-0c7cc4735820feb23",
            "subnet_id": "subnet-0e1035f53b7e29403"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e978851570564de8",
            "route_table_id": "rtb-0c7cc4735820feb23",
            "subnet_id": "subnet-02d5b0dcf3acc4b62"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:security-group/sg-040893827d60c5c91",
            "description": " SG for APP ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040893827d60c5c91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-alb-sg",
            "name_prefix": "",
            "owner_id": "324354002889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:security-group/sg-0e989370ca1300c09",
            "description": " SG for WEB ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e989370ca1300c09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-alb-sg",
            "name_prefix": "",
            "owner_id": "324354002889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_app_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:security-group/sg-04f651011cf7a1271",
            "description": " SG for app_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f651011cf7a1271",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e989370ca1300c09"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e989370ca1300c09"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_server-sg",
            "name_prefix": "",
            "owner_id": "324354002889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:security-group/sg-02fcd362ba224d5df",
            "description": "SG for rds",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "allow",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f651011cf7a1271"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-02fcd362ba224d5df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f651011cf7a1271"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tf_sg_rds",
            "name_prefix": "",
            "owner_id": "324354002889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:security-group/sg-010b95fc8fdacdbfb",
            "description": " SG for web_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010b95fc8fdacdbfb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e989370ca1300c09"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e989370ca1300c09"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_server-sg",
            "name_prefix": "",
            "owner_id": "324354002889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:subnet/subnet-0ae028af8ddeced95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae028af8ddeced95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324354002889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1a"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:subnet/subnet-099454e11f5f79522",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099454e11f5f79522",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324354002889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1b"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:subnet/subnet-0b27ca2105b78bdf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b27ca2105b78bdf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "324354002889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1a"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:subnet/subnet-010a00fe72d3a62d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010a00fe72d3a62d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "324354002889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1b"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:subnet/subnet-0e1035f53b7e29403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1035f53b7e29403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324354002889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1a"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:324354002889:subnet/subnet-02d5b0dcf3acc4b62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d5b0dcf3acc4b62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324354002889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1b"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-webtier-alb/3a97613cdccac12b",
            "arn_suffix": "app/tf-webtier-alb/3a97613cdccac12b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-webtier-alb-439400222.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-webtier-alb/3a97613cdccac12b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-webtier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e989370ca1300c09"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010a00fe72d3a62d8"
              },
              {
                "subnet_id": "subnet-0b27ca2105b78bdf0"
              }
            ],
            "subnets": [
              "subnet-010a00fe72d3a62d8",
              "subnet-0b27ca2105b78bdf0"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "vpc_id": "vpc-0ecdc30d2e5c3d11a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.webTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:targetgroup/tf-webTier-tg/8ef8c2895a81828f",
            "arn_suffix": "targetgroup/tf-webTier-tg/8ef8c2895a81828f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:324354002889:targetgroup/tf-webTier-tg/8ef8c2895a81828f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:324354002889:loadbalancer/app/tf-webtier-alb/3a97613cdccac12b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-webTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ecdc30d2e5c3d11a"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}